added getWatchListIds function
