# backend/api/openapi.yaml
@@ -181,6 +181,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+
+  /movies/getWatchListIds:
+    get:
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Succesful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WatchListIds'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /movies/recommendations:
     get:
       security:
@@ -754,6 +773,12 @@ components:
       properties:
         items:
           $ref: '#/components/schemas/MovieInfo'
+
+    WatchListIds:
+      type: array
+      properties:
+        id:
+          type: integer
 
 
     RecommendationListArr:
